; ModuleID = '/home/carl/AnghaBench/libgit2/tests/rebase/extr_setup.c_test_rebase_setup__merge_onto_and_upstream.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/rebase/extr_setup.c_test_rebase_setup__merge_onto_and_upstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_REPOSITORY_STATE_NONE = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"refs/heads/gravy\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"refs/heads/veal\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@.str.3 = private unnamed_addr constant [41 x i8] c"efad0b11c47cb2f0220cbd6f5b0f93bb99064b00\00", align 1
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [42 x i8] c"d616d97082eb7bb2dc6f180a7cca940993b7a56f\0A\00", align 1
@.str.5 = private unnamed_addr constant [22 x i8] c"rebase/.git/ORIG_HEAD\00", align 1
@GIT_REPOSITORY_STATE_REBASE_MERGE = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [31 x i8] c"rebase/.git/rebase-merge/cmt.1\00", align 1
@.str.7 = private unnamed_addr constant [3 x i8] c"1\0A\00", align 1
@.str.8 = private unnamed_addr constant [29 x i8] c"rebase/.git/rebase-merge/end\00", align 1
@.str.9 = private unnamed_addr constant [42 x i8] c"efad0b11c47cb2f0220cbd6f5b0f93bb99064b00\0A\00", align 1
@.str.10 = private unnamed_addr constant [30 x i8] c"rebase/.git/rebase-merge/onto\00", align 1
@.str.11 = private unnamed_addr constant [8 x i8] c"master\0A\00", align 1
@.str.12 = private unnamed_addr constant [35 x i8] c"rebase/.git/rebase-merge/onto_name\00", align 1
@.str.13 = private unnamed_addr constant [35 x i8] c"rebase/.git/rebase-merge/orig-head\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_rebase_setup__merge_onto_and_upstream() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = load i32, i32* @GIT_REPOSITORY_STATE_NONE, align 4
  %12 = load i32, i32* @repo, align 4
  %13 = call i32 @git_repository_state(i32 %12)
  %14 = call i32 @cl_assert_equal_i(i32 %11, i32 %13)
  %15 = load i32, i32* @repo, align 4
  %16 = call i32 @git_reference_lookup(i32** %2, i32 %15, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32, i32* @repo, align 4
  %19 = call i32 @git_reference_lookup(i32** %3, i32 %18, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load i32, i32* @repo, align 4
  %22 = call i32 @git_reference_lookup(i32** %4, i32 %21, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = load i32, i32* @repo, align 4
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @git_annotated_commit_from_ref(i32** %5, i32 %24, i32* %25)
  %27 = call i32 @cl_git_pass(i32 %26)
  %28 = load i32, i32* @repo, align 4
  %29 = load i32*, i32** %3, align 8
  %30 = call i32 @git_annotated_commit_from_ref(i32** %6, i32 %28, i32* %29)
  %31 = call i32 @cl_git_pass(i32 %30)
  %32 = load i32, i32* @repo, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @git_annotated_commit_from_ref(i32** %7, i32 %32, i32* %33)
  %35 = call i32 @cl_git_pass(i32 %34)
  %36 = load i32, i32* @repo, align 4
  %37 = load i32*, i32** %5, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = load i32*, i32** %7, align 8
  %40 = call i32 @git_rebase_init(i32** %1, i32 %36, i32* %37, i32* %38, i32* %39, i32* null)
  %41 = call i32 @cl_git_pass(i32 %40)
  %42 = call i32 @git_oid_fromstr(i32* %10, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.3, i64 0, i64 0))
  %43 = load i32, i32* @repo, align 4
  %44 = call i32 @git_repository_head(i32** %8, i32 %43)
  %45 = call i32 @cl_git_pass(i32 %44)
  %46 = load i32*, i32** %8, align 8
  %47 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %48 = call i32 @git_reference_peel(i32** %9, i32* %46, i32 %47)
  %49 = call i32 @cl_git_pass(i32 %48)
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @git_commit_id(i32* %50)
  %52 = call i32 @cl_assert_equal_oid(i32* %10, i32 %51)
  %53 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.4, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0))
  %54 = load i32, i32* @GIT_REPOSITORY_STATE_REBASE_MERGE, align 4
  %55 = load i32, i32* @repo, align 4
  %56 = call i32 @git_repository_state(i32 %55)
  %57 = call i32 @cl_assert_equal_i(i32 %54, i32 %56)
  %58 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.4, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.6, i64 0, i64 0))
  %59 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0), i32 2, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.8, i64 0, i64 0))
  %60 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.9, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i64 0, i64 0))
  %61 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.11, i64 0, i64 0), i32 7, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.12, i64 0, i64 0))
  %62 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.4, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.13, i64 0, i64 0))
  %63 = load i32*, i32** %9, align 8
  %64 = call i32 @git_commit_free(i32* %63)
  %65 = load i32*, i32** %8, align 8
  %66 = call i32 @git_reference_free(i32* %65)
  %67 = load i32*, i32** %5, align 8
  %68 = call i32 @git_annotated_commit_free(i32* %67)
  %69 = load i32*, i32** %6, align 8
  %70 = call i32 @git_annotated_commit_free(i32* %69)
  %71 = load i32*, i32** %7, align 8
  %72 = call i32 @git_annotated_commit_free(i32* %71)
  %73 = load i32*, i32** %2, align 8
  %74 = call i32 @git_reference_free(i32* %73)
  %75 = load i32*, i32** %3, align 8
  %76 = call i32 @git_reference_free(i32* %75)
  %77 = load i32*, i32** %4, align 8
  %78 = call i32 @git_reference_free(i32* %77)
  %79 = load i32*, i32** %1, align 8
  %80 = call i32 @git_rebase_free(i32* %79)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_repository_state(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32, i32*) #1

declare dso_local i32 @git_rebase_init(i32**, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #1

declare dso_local i32 @git_repository_head(i32**, i32) #1

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #1

declare dso_local i32 @cl_assert_equal_oid(i32*, i32) #1

declare dso_local i32 @git_commit_id(i32*) #1

declare dso_local i32 @cl_assert_equal_file(i8*, i32, i8*) #1

declare dso_local i32 @git_commit_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1

declare dso_local i32 @git_rebase_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
